# GMRES

./: CMakeLists.txt  GMRES.cpp  README.md
GMRES_C++/: GMRES.cpp  GMRES_mpi.cpp  GMRES_openmp.cpp
GMRES_C++/GMRES MPI/: CMakeLists.txt  GMRES_mpi.cpp
GMRES_Python/: GMRES_numba_multiprocessing .ipynb
GMRES_Python/.ipynb_checkpoints/: GMRES_numba_multiprocessing -checkpoint.ipynb
GMRES_Python/MPI/: GMRES.py  README.md  gen.py  test.sh
